
name:                demo-app
version:             0.1.0.0
synopsis:            Demo
license:             AllRightsReserved
license-file:        ../LICENSE
author:              Hans Hoglund
maintainer:          hans@beautifuldestinations.com
build-type:          Simple
cabal-version:       >=1.10

executable demo-app
  main-is:             Main.hs
  build-depends:       base
                     , base-prelude
                     , stm
                     , contravariant
                     , vector
                     , profunctors
                     , text
                     , scientific
                     , mtl
                     , transformers
                     , time
                     , containers
                     , unordered-containers
                     , multiset
                     , lens
                     , multiset
                     , semigroups
                    --  , data-interval
                     , linear
                     , vector-space
                     , colour
                     , xml
                     , neat-interpolation
                     , data-default
                     , containers
                     , aeson
                     , bytestring
                     , monad-parallel
                     , random
                    --  , ListZipper
                     , split
                     , either
                     , boxes
                     , network-uri
                     , template-haskell
                     , uuid
                     , QuickCheck
                     , lubeck-core
                     , lubeck-frp
                     , lubeck-drawing
                     , lubeck-dv
                     , email-validate
                     , hashable
                     , deepseq
                    --  , extended-reals
                     , foldl
  if impl(ghcjs)
    build-depends:     ghcjs-base
                     , lubeck-web
                     , virtual-dom
  default-language:    Haskell2010
  hs-source-dirs:      src
  default-language:    Haskell2010
  cpp-options:         -DGHCJS_BROWSER
  ghc-options:         -fno-warn-typed-holes
